syntax = "proto3";

package flow;

// The service definition.
service FlowProto {
  // Sends flow
  rpc SendFlow (stream FlowRequest) returns (FlowReply) {}
}

// The request message.
message FlowRequest {
  bytes message = 1;
}

// The response message.
message FlowReply {
  string message = 1;
}
